<resources>
    <string name="app_name">HospitalCivil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_scan_error">Not a valid input! Please try again</string>
    <string name="qr_scan_instructions">Scan the patient\'s QR code</string>
    <string name="qr_scan_placeholder">Scan code will be shown here</string>
    <string name="id_colon">ID: </string>
    <string name="name_colon">Name: </string>
    <string name="age_colon">Age: </string>
    <string name="gender_colon">Gender: </string>
    <string name="allergies_colon">Allergies: </string>
    <string name="description_colon">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="continueTxt">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="editStatus">Edit Appointment</string>
    <string name="creatingStatus">New Appointment</string>
    <string name="login">Login</string>
    <string name="username_colon">Username:</string>
    <string name="username">Username</string>
    <string name="password_colon">Password:</string>
    <string name="default_username">VASI920523NT4</string>
    <string name="password">Password</string>
    <string name="appointments">Appointments</string>
    <string name="emergency">Emergency</string>
    <string name="map">Map</string>
    <string name="my_info">MyInfo</string>
    <string name="appointment">Appointment</string>
    <string name="back">Back</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="Confirmation">Are you sure?</string>
</resources>
