<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hospitalAzul"
    android:orientation="vertical"
    tools:context=".CameraActivity">

    <TextView
        android:id="@+id/cameraInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/qr_scan_instructions"
        android:textAlignment="center"
        android:textColor="@color/hospitalAmarillo"
        android:textSize="30sp"
        android:textStyle="bold" />

    <SurfaceView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <TextView
        android:id="@+id/text_obtained"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/qr_scan_placeholder"
        android:textAlignment="center"
        android:textColor="@color/hospitalAmarillo"
        android:textSize="25sp"
        android:textStyle="bold"
        app:lineHeight="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scanCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/hospitalAzul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scanContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/continueTxt"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>